# flare-index

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  PATENTS.md  README.md  docker-compose.yml  pyproject.toml
bench/: bench_encrypted_vs_plain.py  bench_profile.py  bench_real_data.py
compose/: entrypoint.sh  generate_secrets.py
docs/: flare-index.md  flare-sse-lexical-index.md  light-cone-graph-authorization.md  partitioned-encrypted-vector-search.md  production-deployment.md  propagation-mask-authorization.md
docs/analysis/: README.md  phase0-findings.md  phase1-findings.md  phase2-findings.md  phase3-findings.md  phase4-findings.md  security.md
flare/: __init__.py  bootstrap.py  crypto.py  demo.py  demo_compose.py  identity.py  lightcone.py  query.py  sealed.py  services_main.py  showcase.py  supercollections.py  types.py  wire.py
flare/ledger/: __init__.py  client.py  memory.py  service.py  signing.py
flare/oracle/: __init__.py  (+6 more)
paper/: CHANGELOG.md  flare.md  refs.bib
tests/: conftest.py  test_cell_key_ttl.py  test_centroid_gate.py  test_concurrent_revoke.py  test_containment.py  test_crypto.py  test_did_resolver.py  test_end_to_end.py  test_envelope.py  test_grant_first.py  test_identity.py  test_lightcone.py  test_oracle_did_binding.py  test_oracle_service.py  test_padding.py  test_path_predicates.py  test_query_cache.py  test_sealed_storage.py  test_signed_ledger.py  test_storage_replay.py  test_storage_signing.py  test_super_contexts.py  test_threshold_oracle.py  test_threshold_shamir.py  test_wire.py  test_wire_batch.py
(+25 files in other folders)
